Only parse itemtypes with itemscope attribute

--- a/test/resources/testPage.html
+++ b/test/resources/testPage.html
@@ -53,6 +53,17 @@
   }
 ]
 </script>
+<div itemtype="http://schema.org/IndividualProduct">
+  <span itemprop="name">Executive Anvil</span>
+  <div itemprop="offers" itemtype="http://schema.org/Offer" itemscope>
+    <link itemprop="url" href="https://example.com/anvil" />
+    <link itemprop="availability" href="https://schema.org/InStock" />
+    <span itemprop="priceCurrency">USD</span>
+    <link itemprop="itemCondition" href="https://schema.org/UsedCondition" />
+    <span itemprop="price">119.99</span>
+    <span itemprop="priceValidUntil">2020-11-20</span>
+  </div>
+</div>
 <div itemscope itemtype="http://schema.org/Product">
   <span itemprop="brand">ACME</span>
   <span itemprop="name">Executive Anvil</span>
