--- a/test/resources/testPage.html
+++ b/test/resources/testPage.html
@@ -2,9 +2,13 @@
 {
   "@context": "http://schema.org/",
   "@type": "Product",
-  "name": "Executive Anvil",
+  "name": "Executive
+Anvil",
   "image": "http://www.example.com/anvil_executive.jpg",
-  "description": "Sleeker than ACME's Classic Anvil, the Executive Anvil is perfect for the business traveler looking for something to drop from a height.",
+  "description": "Sleeker than ACME's Classic Anvil,
+the Executive Anvil is perfect for the business 
+  
+  traveler looking for something to drop from a height.",
   "mpn": "925872",
   "brand": {
     "@type": "Thing",
