--- a/test/resources/testPage.html
+++ b/test/resources/testPage.html
@@ -251,4 +251,28 @@ the Executive Anvil is perfect for the business
     <link property="availability" content="http://schema.org/InStock" />In stock! Order now!
   </span>
   </span>
+
+  <section itemscope="" itemtype="http://schema.org/Product">
+	<meta itemprop="sku" content="OEPJX150-C01" /><meta itemprop="name" content="Brown Leather Tassel Loafer" /><meta itemprop="color" content="Brown" />
+	<meta
+		itemprop="description"
+		content="A classic brown loafer with preppy charm, these shoes are superbly manufactured for a timeless investment. Constructed from premium leather with leather lining and leather soles, this classic design is made your comfort and durability. 
+<br/>
+<br/>• Leather Upper
+<br/>• Leather Lining
+<br/>• Leather Sole 
+<br/>• Rubber Heel 
+<br/><br/> Made in Portugal"
+	/>
+	<meta itemprop="image" content="https://images.hawesandcurtis.com/tr:q-80/OE/OEPJX150-C01-166860-870px-1002px.jpg" />
+	<div itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
+		<link itemprop="url" href="/brown-leather-tassel-loafer-oepjx150-c01" /><meta itemprop="itemCondition" itemtype="http://schema.org/OfferItemCondition" content="http://schema.org/NewCondition" />
+		<meta itemprop="availability" content="http://schema.org/InStock" /><meta itemprop="price" content="159" /><meta itemprop="priceCurrency" content="GBP" /><meta itemprop="itemCondition" content="https://schema.org/NewCondition" />
+		<meta itemprop="priceValidUntil" content="2025-04-24" />
+	</div>
+	<div itemprop="AggregateRating" itemscope="" itemtype="http://schema.org/AggregateRating">
+		<meta itemprop="ratingValue" content="4.9" />
+		<meta itemprop="reviewCount" content="8" />
+	</div>
+</section>
 </div>
