Remove non-js characters from the end of schema string

--- a/test/resources/testPage.html
+++ b/test/resources/testPage.html
@@ -124,7 +124,7 @@ the Executive Anvil is perfect for the business
       "name": "Executive Objects"
     }
   }
-}
+};
 </script>
 <script type="application/ld+json">
 [
@@ -148,7 +148,7 @@ the Executive Anvil is perfect for the business
       "name":"Theatre"
     }
   }
-]
+]test
 </script>
 <script type="application/ld+json">{
   "@context": "http://schema.org",
