Get json by counting opening and closing brackets

--- a/test/resources/testPage.html
+++ b/test/resources/testPage.html
@@ -148,7 +148,7 @@ the Executive Anvil is perfect for the business
       "name":"Theatre"
     }
   }
-]test
+]test[]
 </script>
 <script type="application/ld+json">{
   "@context": "http://schema.org",
