--- a/test/resources/testPage.html
+++ b/test/resources/testPage.html
@@ -184,7 +184,7 @@ the Executive Anvil is perfect for the business
   <span itemprop="brand">ACME</span>
   <span itemprop="name">Executive Anvil</span>
   <img itemprop="image" src="anvil_executive.jpg" alt="Executive Anvil logo" />
-  <span itemprop="description">Sleeker than ACME's Classic Anvil, the
+  <span itemprop="description">Sleeker than & ACME's Classic Anvil, the
     Executive Anvil is perfect for the business traveler
     looking for something to drop from a height.
   </span>
@@ -254,7 +254,7 @@ the Executive Anvil is perfect for the business
   <span property="brand">ACME</span>
   <span property="name">Executive Anvil</span>
   <img propertyu="image" src="anvil_executive.jpg" alt="Executive Anvil logo" />
-  <span property="description">Sleeker than ACME's Classic Anvil, the
+  <span property="description">Sleeker than & ACME's Classic Anvil, the
     Executive Anvil is perfect for the business traveler
     looking for something to drop from a height.
   </span>
